# jitcu

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  env.sh  pyproject.toml
.github/workflows/: publish.yml
jitcu/: __init__.py  benchmark.py  core.py  env.py  library.py  profiler.py
jitcu/core/: __init__.py  ascend.py  common.py  cuda.py  externals.py
jitcu/data/include/jitcu/: all.h  dbg.h  profiler.h  tensor.h  utils.h
tests/: test_ascend.py  test_ascend_910a.py  test_cpu.py  test_cpu_add.py  test_cuda.py  test_gpu.py  test_nvshmem.py
