[project]
name = "jitcu"
version = "1.0.0"
description = "A minimal JIT loader for CUDA / AscendC kernels callable from PyTorch"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "Runxin Zhong", email = "rxzhong@outlook.com" },
]
keywords = ["cuda", "jit", "pytorch", "ascend", "kernel"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering",
  "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = [
  "torch",
  "numpy",
]

[project.urls]
Homepage = "https://github.com/monellz/jitcu"
Repository = "https://github.com/monellz/jitcu"
Issues = "https://github.com/monellz/jitcu/issues"

[project.optional-dependencies]
profiler = [
  "tg4perfetto == 0.0.4", # FIXME: use latest version
  "protobuf == 5.29.6",
]

[dependency-groups]
dev = [
  "pytest",
  "pre-commit",
  "ruff",
  "ty",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jitcu*"]

[tool.setuptools.package-data]
"jitcu" = ["data/**"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [".venv", "build"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "W",   # pycodestyle warnings
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
# tests embed C++/CUDA kernel sources as raw strings — keep them readable.
"tests/*" = ["E501"]

[tool.ty.src]
include = ["jitcu"]
