[project]
name = "jitcu"
version = "1.0.0"
description = "A minimal JIT loader for CUDA / AscendC kernels callable from PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
]

[project.optional-dependencies]
profiler = [
  "tg4perfetto == 0.0.4", # FIXME: use latest version
  "protobuf == 5.29.6",
]

[dependency-groups]
dev = [
  "pytest",
  "pre-commit",
  "ruff",
  "ty",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jitcu*"]

[tool.setuptools.package-data]
"jitcu" = ["data/**"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [".venv", "build"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "W",   # pycodestyle warnings
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
# tests embed C++/CUDA kernel sources as raw strings — keep them readable.
"tests/*" = ["E501"]

[tool.ty.src]
include = ["jitcu"]
